# datafusion-csv

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: DEVELOPMENT.md  NEXT_STEPS.md  REMOTE_TESTING.md  STREAMING_ARCHITECTURE.md  USER_GUIDE.md
src/: file_format.rs  file_source.rs  lib.rs  object_store_reader.rs  physical_exec.rs
tests/: e2e_test.rs
tests/e2e_data/: orders.csv  products.csv  sales_data.tsv  users.csv
