[package]
name = "datafusion-csv"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Apache DataFusion CSV format integration"
repository = "https://github.com/geoyogesh/datafusion-csv"

[dependencies]
arrow = "53"
arrow-array = "53"
arrow-schema = "53"
arrow-cast = "53"
csv = "1.3"
datafusion = "43.0.0"
datafusion-common = "43.0.0"
datafusion-execution = "43.0.0"
datafusion-physical-expr = "43.0.0"
futures = "0.3"
object_store = { version = "0.11", features = ["http"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
bytes = "1.0"
url = "2.5"

[dev-dependencies]
tempfile = "3.0"
